force-app/main/default/objects/Case_PCQT__c/Case_PCQT__c.object-meta.xml
<CustomObject>
    <label>Case PCQT</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Case PCQT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case PCQTs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>