force-app/main/default/objects/Case_PCQT__c/fields/Case_PCQT_Key__c.field-meta.xml
<CustomField>
    <fullName>Case_PCQT_Key__c</fullName>
    <externalId>true</externalId>
    <label>Case PCQT Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>