force-app/main/default/objects/Case_PCQT__c/fields/PCQT__c.field-meta.xml
<CustomField>
    <fullName>PCQT__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>PCQT</label>
    <referenceTo>PCQT__c</referenceTo>
    <relationshipLabel>Case PCQTs</relationshipLabel>
    <relationshipName>Case_PCQTs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>